Oppdatert med sletting av tags